# machinelearning-examples

./: .gitignore  README.md
docs/: toc.yml
examples/Decoder/PositionDecodingFromHippocampalSortedSpikes/: ClusterlessSpikes.bonsai  PositionDecoding.bonsai  README.md  SortedSpikes.bonsai
examples/HiddenMarkovModels/: README.md
examples/HiddenMarkovModels/ExtendedModelConfiguration/: LoadModelConfig.bonsai  README.md  SaveModelConfig.bonsai  pyproject.toml
examples/HiddenMarkovModels/InferringBehavioralStateFromKinematics/: InferringBehavioralState.bonsai  README.md  pyproject.toml  requirements.txt
examples/HiddenMarkovModels/SimulatedData/: README.md  SimulatedData.bonsai  pyproject.toml
examples/LinearDynamicalSystems/NeuralLatents/OnlineFiltering/: Extensions.csproj  OnlineFiltering.bonsai  README.md  pyproject.toml  train_model.py
examples/LinearDynamicalSystems/NeuralLatents/OnlineFiltering/.bonsai/: Bonsai.config
examples/LinearDynamicalSystems/NeuralLatents/OnlineFiltering/Extensions/: LoadPretrainedKFModelParameters.cs
examples/NeuralDecoding/PositionDecodingFromHippocampus/: ClusterlessSpikes.bonsai  DecodeClusterlessSpikes.bonsai  DecodeSortedSpikes.bonsai  Extensions.csproj  README.md  SortedSpikes.bonsai  requirements.txt
examples/PointProcessDecoder/ClassifyPositionFromHippocampusSortedUnits/: OnlineSortedSpikesClassifier.bonsai  README.md
examples/PointProcessDecoder/DecodePositionFromHippocampusClusterless/: OnlineClusteressDecoder.bonsai  OnlineClusterlessDecoder.bonsai  README.md
examples/Torch/CustomPyTorchModel/: Extensions.csproj  (+4 more)
(+100 files in other folders)
