[project]
name = "estimatingneurallatents"
version = "0.1.0"
description = "Example for estimating neural latents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dandi>=0.71.4",
    "h5py>=3.14.0",
    "numpy>=2.3.3",
    "pynwb>=3.1.2",
    "remfile>=0.1.13",
    "ssm",
    "torch>=2.8.0",
]

[tool.uv.sources]
ssm = { git = "https://github.com/ncguilbeault/lds_python", rev = "75e3e5e92ce6344009b62a5034db49b238db63ef" }
